--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,6 +29,6 @@
     <title>Study Street</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="height: 0;"></div>
   </body>
 </html>
